--- a/css/hexagons.css
+++ b/css/hexagons.css
@@ -51,6 +51,7 @@ body{
   padding:0 5%;
   background-color:#008080; background-color: rgba(0, 128, 128, 0.8);
   font-family: 'Raleway', sans-serif;
+  font-size:2;
   transition: top .2s ease-out, bottom .2s ease-out, .2s padding .2s ease-out;
 }
 #categories li h1{
